bugfix overflow-y and added new loading screen

--- a/got-showcase-app/src/app/components/loading-container/loading-container.component.scss
+++ b/got-showcase-app/src/app/components/loading-container/loading-container.component.scss
@@ -6,3 +6,30 @@
   align-items: center;
 }
 
+.pulse {
+  width: 150px;
+  height: 150px;
+  background: #96D1DD;
+  border-radius: 50%;
+  color: black;
+  font-size: 2rem;
+  font-family: 'got-font', Arial, Helvetica, sans-serif;
+  text-align: center;
+  line-height: 150px;
+  animation: animate 2s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+      box-shadow: 0 0 0 0 rgba($color: #96D1DD, $alpha: .7), 0 0 0 0 rgba($color: #96D1DD, $alpha: .7);
+    }
+    40% {
+      box-shadow: 0 0 0 50px rgba($color: #96D1DD, $alpha: 0), 0 0 0 0 rgba($color: #96D1DD, $alpha: .7);
+    }
+    80% {
+      box-shadow: 0 0 0 50px rgba($color: #96D1DD, $alpha: 0), 0 0 0 30px rgba($color: #96D1DD, $alpha: 0);
+    }
+    100% {
+      box-shadow: 0 0 0 0 rgba($color: #96D1DD, $alpha: 0), 0 0 0 30px rgba($color: #96D1DD, $alpha: 0);
+    }
+}
